Closed Bug 348153 Opened 19 years ago Closed 19 years ago

Frames from dynamic MathML table children are not made with the right creator

Categories

(Core :: MathML, defect)

x86
All
defect
Not set
normal

Tracking

()

RESOLVED FIXED

People

(Reporter: rbs, Assigned: rbs)

References

Details

Attachments

(2 files, 1 obsolete file)

When a new table-related frame has to be created by nsCSSFrameConstructor::ConstructFrameByDisplayType(), it does not check whether to use the nsMathMLmtableCreator, rather than the generic nsTableCreator. Consequently, a newly appended <mtd> is always treated generically as <td>. I will attach a patch.
Attached patch patch (obsolete) — Splinter Review
Attachment #233024 - Flags: superreview?(bzbarsky)
Attachment #233024 - Flags: review?(bzbarsky)
Not useful to see the bug -- except if you apply the part of the patch in layout/mathml and not the part in layout/base... in which case the newly added assertion in layout/mathml will fire.
Attachment #233024 - Attachment is obsolete: true
Attachment #233216 - Flags: superreview?(bzbarsky)
Attachment #233216 - Flags: review?(bzbarsky)
Attachment #233024 - Flags: superreview?(bzbarsky)
Attachment #233024 - Flags: review?(bzbarsky)
Comment on attachment 233216 [details] [diff] [review] patch (add one spot missed in earlier patch) What about the callsites in CreateContinuing* ? In any case, this looks fine.
Attachment #233216 - Flags: superreview?(bzbarsky)
Attachment #233216 - Flags: superreview+
Attachment #233216 - Flags: review?(bzbarsky)
Attachment #233216 - Flags: review+
Checked in. > What about the callsites in CreateContinuing* ? They use the bare NS_NewTable{Row|Cell... etc} calls, and these would have to be converted to calls via a creator. I am not venturing there right now, as page breaks inside a [huge matrix] are not in my radar. The stretchy parentheses around them would have to break to, opening a parandora box (not even TeX does that).
Status: NEW → RESOLVED
Closed: 19 years ago
Resolution: --- → FIXED
Depends on: 348709
Depends on: 348811
*** Bug 338664 has been marked as a duplicate of this bug. ***
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: